--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "next": "15.3.1",
+    "query-string": "^9.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
